--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "wobeto/twitter",
     "description": "Laravel 4 Service Provider to interact with twitter account, like return a collection of the most recent Tweets posted by the user, post Tweets, delete status and get user profile.",
     "keywords": ["laravel", "twitter", "provider"],
+    "license": "MIT",
     "authors": [
         {
             "name": "Fernando Wobeto",
